syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.polypheny.db.protointerface.proto";
option java_outer_classname = "Error";

package polypheny.protointerface;

message ErrorDetails {
  optional int32 error_code = 1;
  optional string state = 2;
  optional string message = 3;
}
